# serverless-compose-post

./: .gitignore  package.json  serverless-compose.yml
src/shared/libs/: pyproject.toml  serverless.yml
src/shared/libs/scripts/: rename_folder_after.py  rename_folder_before.py
src/shared/libs/src/: auxiliary.py
src/user/: config.xample.json  pyproject.toml  serverless.yml
src/user/service/: register.py
