[tool.poetry]
name = "mylambdaproject"
version = "0.1.0"
description = ""
authors = ["Jaior andres"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
aws-xray-sdk = "^2.9.0"
sentry-sdk = "^1.5.0"

[tool.poetry.dev-dependencies]
libs = {path = "../shared/libs", develop = true}
boto3 = "^1.20.23"
black = "^21.12b0"
pytest = "^6.2.5"
pandas = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
